Implement AssertionEvaluationBuilder
* add new fields to AccessibleFieldGraph for more information about the classes
the graph was built for
* add convenience methods to Path